--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Blog-App
+spring.datasource.url=jdbc:mysql://localhost:3305/sms?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=root
+
+#Hibernate
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+#Hibernate auto ddl
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=DEBUG
